--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
             <artifactId>log4j-1.2-api</artifactId>
             <version>2.13.3</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>expiringmap</artifactId>
+            <version>0.5.9</version>
+        </dependency>
     </dependencies>
 
 	<build>
