--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,64 @@
 
+### Server properties
+server.port=8080
+
+
+### Datasource properties
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysqldb/autograder
+spring.datasource.username=root
+spring.datasource.password=autograder
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.sql.init.platform=mysql
+# Replaces spring.datasource.platform=mysql Deprecated and replaced by the next property
+
+
+### JPA properties. Using ddl-auto = create will drop schema every-time.
+### Choose the correct property based on development / production role.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.sql.init.mode=always
+# Replaces spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+
+
+### JWT properties
+app.jwt.header=Authorization
+app.jwt.header.prefix=Bearer 
+app.jwt.secret=mySecret
+app.jwt.expiration=900000000
+
+
+### Jackson properties
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.time-zone=UTC
+
+
+### Token properties
+app.token.email.verification.duration=3600000
+app.token.password.reset.duration=3600000
+app.token.refresh.duration=2592000000
+app.velocity.templates.location=/templates/
+
+# Logged out token cache
+app.cache.logoutToken.maxSize=1000
+
+### firebase storage
+firebase.bucket-name=autograde-319720.appspot.com
+firebase.image-url=https://firebasestorage.googleapis.com/v0/b/${firebase.bucket-name}/o/%s?alt=media
+
+
+### Multipart Properties
+spring.servlet.multipart.max-file-size=5000KB
+spring.servlet.multipart.max-request-size=5000KB
+
+
+### job runner config
+org.jobrunr.background-job-server.enabled=true
+org.jobrunr.dashboard.enabled=true
+org.jobrunr.dashboard.port=8000
+
+
+
