--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,27 +3,6 @@
 server.port=8080
 
 
-### Datasource properties
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysqldb/autograder
-spring.datasource.username=root
-spring.datasource.password=autograder
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
-spring.sql.init.platform=mysql
-# Replaces spring.datasource.platform=mysql Deprecated and replaced by the next property
-
-
-### JPA properties. Using ddl-auto = create will drop schema every-time.
-### Choose the correct property based on development / production role.
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.sql.init.mode=always
-# Replaces spring.datasource.initialization-mode=always
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-
-
 ### JWT properties
 app.jwt.header=Authorization
 app.jwt.header.prefix=Bearer 
@@ -61,4 +40,5 @@ org.jobrunr.dashboard.enabled=true
 org.jobrunr.dashboard.port=8000
 
 
-
+### Setting the active profile
+spring.profiles.active=dev
