testing and refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,12 @@ org.jobrunr.background-job-server.enabled=true
 org.jobrunr.dashboard.enabled=true
 org.jobrunr.dashboard.port=8000
 
+### User Registration frontend URL
+#ui.register.user = http://192.168.43.56:8080/verify
+#ui.reset.password.user = http://192.168.43.56:8080/password/reset
+#
+#ui.assignment.new = http://192.168.43.56:8080/dashboard/enrolled
+
 
 ### Setting the active profile
 spring.profiles.active=dev
