--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>auth-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -130,6 +130,9 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>
+			auth-service-api
+		</finalName>
 	</build>
 
 </project>
