--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,7 +5,7 @@ app.message=This is the primary Application Property for TEST using h2 inMemory 
 spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:auth_api_testdb
-spring.datasource.username=h2_db
+spring.datasource.username=dbryzz
 spring.datasource.password=mypass
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
