--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,8 +1,8 @@
 #Mail properties. Enable less secure apps if using Gmail id
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
-spring.mail.username=auth.service@gmail.com
-spring.mail.password=1security@Me
+spring.mail.username=email
+spring.mail.password=password
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.debug=true
